kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allinone
  labels:
    app: allinone
spec:
  selector:
    app: allinone
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
