kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allinone-ingress
spec:
  rules:
    - host: allinone.local.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: allinone
                port:
                  number: 8080
